# rust-script-ext

./: .gitignore  Cargo.toml  LICENSE  README.md  template-cargo-script.rs  template-rust-script.rs  template.rs
.github/: FUNDING.yml
.github/workflows/: docs.yml  rust.yml
macros/: Cargo.toml  lib.rs  tests.rs
src/: args.rs  cmd.rs  file.rs  fs.rs  io.rs  lib.rs
src/snapshots/: rust_script_ext__args__tests__error_printing_finish.snap  rust_script_ext__args__tests__non-existent.snap  rust_script_ext__args__tests__parse-err.snap  rust_script_ext__cmd__tests__execute-err.snap  rust_script_ext__cmd__tests__unknown-cmd.snap
src/table/: mod.rs
