[package]
name = "rust-script-ext"
version = "0.1.0"
authors = [ "Kurt Lawrence <kurtlawrence.info>" ]
edition = "2021"
description = "Opinionated set of extensions for use with rust-script"
repository = "https://github.com/kurtlawrence/rust-script-ext"
license-file = "LICENSE"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

features = []

[dependencies]
