[package]
name = "rust-script-ext"
version = "0.1.0"
authors = [ "Kurt Lawrence <kurtlawrence.info>" ]
edition = "2021"
description = "Opinionated set of extensions for use with rust-script"
repository = "https://github.com/kurtlawrence/rust-script-ext"
license-file = "LICENSE"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2"
fastrand = "2.0"
humantime = "2.1"
miette = { version = "5.10", features = ["fancy"] }
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde-human-readable"] }
