[package]
name = "rust-script-ext"
version = "1.0.0"
authors = [ "Kurt Lawrence <kurtlawrence.info>" ]
edition = "2021"
description = "Opinionated set of extensions for use with rust-script"
repository = "https://github.com/kurtlawrence/rust-script-ext"
license-file = "LICENSE"

[workspace]
members = ["macros"]

[dependencies]
macros = { path = "macros" }
comfy-table = "7.0"
csv = "1.2"
fastrand = "2.0"
flume = "0.10.14"
globset = "0.4"
howudoin = { version = "0.1", features = ["term-line"] }
humantime = "2.1"
itertools = "0.13.0"
miette = { version = "7.2", features = ["fancy"] }
numfmt = { git = "https://github.com/kurtlawrence/numfmt" }
rayon = "1.7"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde-human-readable"] }
toml = "0.8"

[dev-dependencies]
insta = "1.31.0"
